--- a/.gitignore
+++ b/.gitignore
@@ -8,4 +8,7 @@
 \f0\fs22 \cf2 \CocoaLigature0 .DS_Store\
 Gemfile.lock\
 package-lock.json\
-}
+\pard\pardeftab720\partightenfactor0
+.sass-cache\
+\pard\tx560\tx1120\tx1680\tx2240\tx2800\tx3360\tx3920\tx4480\tx5040\tx5600\tx6160\tx6720\pardirnatural\partightenfactor0
+_site}
